Personal Information alignment issue resolved

--- a/src/app/modules/itr-filing/itr-wizard/pages/all-personal-information/all-personal-information.component.scss
+++ b/src/app/modules/itr-filing/itr-wizard/pages/all-personal-information/all-personal-information.component.scss
@@ -14,6 +14,11 @@
     border-radius: 4px 4px 0px 0px;
 }
 
+.spcMarg {
+    margin: 0px 25px 0px 25px;
+}
+
+
 .wrap-content {
     align-items: flex-start;
     display: flex;
