--- a/src/app/modules/tasks/pages/assigned-new-users/assigned-new-users.component.scss
+++ b/src/app/modules/tasks/pages/assigned-new-users/assigned-new-users.component.scss
@@ -89,6 +89,7 @@
   font-weight: 400;
   line-height: 20px; /* 142.857% */
   letter-spacing: -0.28px;
+  z-index:100;
 }
 .srch-btn-1{
   display: flex;
@@ -105,6 +106,7 @@
   font-weight: 400;
   line-height: 20px; /* 142.857% */
   letter-spacing: -0.28px;
+  z-index:100;
 }
 
 .new-table-container{
