--- a/src/styles.css
+++ b/src/styles.css
@@ -3849,7 +3849,7 @@ pagination-controls {
 }
 
 .lgtBtn {
-  margin-left: 8%;
+  margin-left: 7%;
   background-color: #ffffff;
   color: #1b67ba;
   border: 2px solid #1b67ba;
